# niobe

./: .gitignore  LICENSE  README.md  pyproject.toml
src/niobe/: __init__.py  config.py  logging_setup.py
src/niobe/cli/: __init__.py  app.py
src/niobe/core/: __init__.py  anomaly.py  ingester.py  monitor.py  parser.py  snapshot.py  store.py
src/niobe/mcp/: __init__.py  __main__.py  formatters.py  server.py
src/niobe/models/: __init__.py  enums.py  runtime.py
tests/: test_anomaly.py  test_cli.py  test_config.py  test_feedback_audit.py  test_formatters.py  test_ingester.py  test_logging_setup.py  test_mcp_server.py  test_models.py  test_monitor.py  test_parser.py  test_snapshot.py  test_store.py
